BookDetail: only enable deleteCopy button if it isn't lent

--- a/src/views/messages.properties
+++ b/src/views/messages.properties
@@ -103,3 +103,4 @@ Copy.Condition.Waste=Waste
 LoanTable.CellContent.Overdue=Overdue
 LoanTable.CellContent.Lent=Lent
 LoanTable.CellContent.Old=Returned
+LoanTable.CellContent.Available=Available
