--- a/src/views/messages_de_CH.properties
+++ b/src/views/messages_de_CH.properties
@@ -100,3 +100,4 @@ Copy.Condition.Waste=Zerstört
 LoanTable.CellContent.Overdue=Überfällig
 LoanTable.CellContent.Lent=Ausgelehnt
 LoanTable.CellContent.Old=Zurückgebracht
+LoanTable.CellContent.Available=Verfügbar
