LoanDetail: Labels get updates (incl. textfield of custId)

--- a/src/views/messages.properties
+++ b/src/views/messages.properties
@@ -104,3 +104,4 @@ LoanTable.CellContent.Overdue=Overdue
 LoanTable.CellContent.Lent=Lent
 LoanTable.CellContent.Old=Returned
 LoanTable.CellContent.Available=Available
+LoanDetail.LoansOfCustomer.text=Loans of $PARAM
