--- a/src/views/messages_de_CH.properties
+++ b/src/views/messages_de_CH.properties
@@ -101,3 +101,4 @@ LoanTable.CellContent.Overdue=Überfällig
 LoanTable.CellContent.Lent=Ausgelehnt
 LoanTable.CellContent.Old=Zurückgebracht
 LoanTable.CellContent.Available=Verfügbar
+LoanDetail.LoansOfCustomer.text=Ausleihen von $PARAM
