--- a/src/views/messages.properties
+++ b/src/views/messages.properties
@@ -105,3 +105,4 @@ LoanTable.CellContent.Lent=Lent
 LoanTable.CellContent.Old=Returned
 LoanTable.CellContent.Available=Available
 LoanDetail.LoansOfCustomer.text=Loans of $PARAM
+LoanDetail.addLoanBtn.text=Lend copy
