--- a/src/views/messages_de_CH.properties
+++ b/src/views/messages_de_CH.properties
@@ -102,3 +102,4 @@ LoanTable.CellContent.Lent=Ausgelehnt
 LoanTable.CellContent.Old=Zurückgebracht
 LoanTable.CellContent.Available=Verfügbar
 LoanDetail.LoansOfCustomer.text=Ausleihen von $PARAM
+LoanDetail.addLoanBtn.text=Exemplar ausleihen
