Set titles in all Frames

--- a/src/views/messages.properties
+++ b/src/views/messages.properties
@@ -1,5 +1,5 @@
 #Eclipse messages class
-#Fri Nov 22 14:12:42 CET 2013
+#Tue Nov 26 11:08:18 CET 2013
 BookDetail.btnAdd.text=Add Copy
 BookDetail.btnCancel.text=Cancel
 BookDetail.btnDelete.text=Delete
@@ -16,13 +16,13 @@ BookDetail.lblShelf.text=Shelf
 BookDetail.lblTitle.text=Title
 BookDetail.pnlInformation.borderTitle=Book Information
 BookDetail.pnlSpecimensEdit.borderTitle=Copies
+BookDetail.this.title=Book Detail\: $PARAM
 BookMaster.Tab.Books=Books
 BookMaster.Tab.Loans=Loans
 BookMaster.btnAddNewBook.text=Add Book
 BookMaster.btnAddNewLoan.text=Add Loan
 BookMaster.btnShowSelected.text=Show selected
 BookMaster.btnShowSelectedLoans.text=Show selected
-BookMaster.frmTodoTitle.title=BookMaster - DEFAULT LOCALE
 BookMaster.lblChosen.text=Selected\: $PARAM
 BookMaster.lblNrOfBooks.text=Nr of books\: $PARAM
 BookMaster.lblNrOfCopies.text=Nr of copies\: $PARAM
@@ -57,6 +57,12 @@ BookMasterTable.viewMenu.text=View
 BookMastertable.BookTableModes.All=All
 BookMastertable.BookTableModes.LentOnly=Lent only
 BookMastertable.BookTableModes.OverdueOnly=Overdue only
+Copy.Condition.Damaged=Damaged
+Copy.Condition.Good=Good
+Copy.Condition.Lost=Lost
+Copy.Condition.New=New
+Copy.Condition.Waste=Waste
+CopyTable.ColHeader.Condition=Condition
 CustomerDetail.City=City
 CustomerDetail.CustomerNo=ID
 CustomerDetail.Name=Name
@@ -72,6 +78,7 @@ CustomerDetail.btnReset.text=Reset
 CustomerDetail.btnSave.text=Save
 CustomerDetail.deleteDlg.message=Do you really want to delete this customer? This action cannot be reversed.
 CustomerDetail.deleteDlg.title=Are you sure?
+CustomerDetail.this.title=Customer Details\: $PARAM
 CustomerMasterTable.ColumnHeader.Address=Address
 CustomerMasterTable.ColumnHeader.CustomerNo=Customer No.
 CustomerMasterTable.ColumnHeader.Name=Name
@@ -82,6 +89,8 @@ CustomerTab.lblNrOfCustomers.text=Nr of customers\: $PARAM
 Customertab.pnlCustomerInventory.borderTitle=Customer List
 Library.DateFormat=mm/dd/yy
 LoanDetail.CustomerSelection.text=Customer Selection
+LoanDetail.LoansOfCustomer.text=Loans of $PARAM
+LoanDetail.addLoanBtn.text=Lend copy
 LoanDetail.btnCopy.text=Find
 LoanDetail.lblCopyId.text=Copy ID
 LoanDetail.lblCustomer.text=Customer
@@ -89,20 +98,13 @@ LoanDetail.lblCustomerId.text=CustomerID
 LoanDetail.lblReturnDate.text=Return Date
 LoanDetail.loanNewTitle.text=Loan New Title
 LoanDetail.nrOfLoansOfCustomer.text=Nr of loans\: $PARAM
+LoanDetail.returnCopyBtn.text=Return selected book
+LoanDetail.this.title=Loan Detail
+LoanTable.CellContent.Available=Available
+LoanTable.CellContent.Lent=Lent
+LoanTable.CellContent.OK=OK
+LoanTable.CellContent.Old=Returned
+LoanTable.CellContent.Overdue=Overdue
 MainView.Tab.Customers=Customers
 MainView.btnExit.text=Exit
-LoanTable.CellContent.Overdue=Overdue
-LoanTable.CellContent.OK=OK
-CopyTable.ColHeader.Condition=Condition
-LoanDetail.returnCopyBtn.text=Return selected book
-Copy.Condition.New=New
-Copy.Condition.Damaged=Damaged
-Copy.Condition.Good=Good
-Copy.Condition.Lost=Lost
-Copy.Condition.Waste=Waste
-LoanTable.CellContent.Overdue=Overdue
-LoanTable.CellContent.Lent=Lent
-LoanTable.CellContent.Old=Returned
-LoanTable.CellContent.Available=Available
-LoanDetail.LoansOfCustomer.text=Loans of $PARAM
-LoanDetail.addLoanBtn.text=Lend copy
+MainView.title=Bibliotheca
