--- a/src/views/messages_de_CH.properties
+++ b/src/views/messages_de_CH.properties
@@ -14,6 +14,7 @@ BookDetail.lblAuthor.text=Autor
 BookDetail.lblPublisher.text=Verlag
 BookDetail.lblShelf.text=Regal
 BookDetail.lblTitle.text=Titel
+BookDetail.this.title=Buch-Detail: $PARAM
 BookDetail.pnlInformation.borderTitle=Buch Information
 BookDetail.pnlSpecimensEdit.borderTitle=Exemplare
 BookMaster.Tab.Books=B\u00FCcher
@@ -22,7 +23,6 @@ BookMaster.btnAddNewBook.text=Buch hinzuf\u00FCgen
 BookMaster.btnAddNewLoan.text=Ausleihe erfassen
 BookMaster.btnShowSelected.text=Selektierte anzeigen
 BookMaster.btnShowSelectedLoans.text=Selektierte anzeigen
-BookMaster.frmTodoTitle.title=BookMaster - CH-LOCALE
 BookMaster.lblChosen.text=Ausgew\u00E4hlt\: $PARAM
 BookMaster.lblNrOfBooks.text=Anzahl B\u00FCcher\: $PARAM
 BookMaster.lblNrOfCopies.text=Anzahl Exemplare\: $PARAM
@@ -30,7 +30,6 @@ BookMaster.pnlBookInventory.borderTitle=B\u00FCcher-Inventar
 BookMaster.pnlBookInventoryStats.borderTitle=Inventar-Statistik
 BookMaster.pnlInventoryStats.borderTitle=Inventar-Statistik
 BookMaster.pnlLoansInventoryStats.borderTitle=Ausleihe-Statistik
-BookMaster.tbsMain.toolTipText=TODO TOOLTIP
 BookMasterLoanTable.ColumnHeader.CopyID=Exemplar-ID
 BookMasterLoanTable.ColumnHeader.LentTo=Ausgeliehen an
 BookMasterLoanTable.ColumnHeader.LentUntil=Rückgabedatum
@@ -69,6 +68,7 @@ CustomerDetail.btnReset.text=Zur\u00FCcksetzen
 CustomerDetail.btnSave.text=Speichern
 CustomerDetail.deleteDlg.message=Wollen Sie diesen Kunden wirklich l\u00F6schen? Diese Aktion kann nicht r\u00FCckg\u00E4ngig gemacht werden.
 CustomerDetail.deleteDlg.title=Sind Sie sicher?
+CustomerDetail.this.title=Kunden-Details: $PARAM
 CustomerMasterTable.ColumnHeader.Address=Adresse
 CustomerMasterTable.ColumnHeader.CustomerNo=Kundennummer
 CustomerMasterTable.ColumnHeader.Name=Name
@@ -84,8 +84,10 @@ LoanDetail.lblCustomer.text=Kunde
 LoanDetail.lblCustomerId.text=Kundennr.
 LoanDetail.lblReturnDate.text=R\u00FCckgabe
 LoanDetail.nrOfLoansOfCustomer.text=Anzahl Ausleihen\: $PARAM
+LoanDetail.this.title=Ausleih-Details
 MainView.Tab.Customers=Kunden
 MainView.btnExit.text=Schliessen
+MainView.title=Bibliotheca
 LoanDetail.loanNewTitle.text=Neuen Titel ausleihen
 LoanDetail.CustomerSelection.text=Kundenauswahl
 LoanTable.CellContent.Overdue=Fällig
