Prettier String for dueDate

--- a/src/views/messages_de_CH.properties
+++ b/src/views/messages_de_CH.properties
@@ -85,6 +85,7 @@ LoanDetail.lblCustomerId.text=Kundennr.
 LoanDetail.lblReturnDate.text=R\u00FCckgabe
 LoanDetail.nrOfLoansOfCustomer.text=Anzahl Ausleihen\: $PARAM
 LoanDetail.this.title=Ausleih-Details
+LoanDetail.returnDateLabel.text=Rückgabedatum: $PARAM
 MainView.Tab.Customers=Kunden
 MainView.btnExit.text=Schliessen
 MainView.title=Bibliotheca
