--- a/src/views/messages.properties
+++ b/src/views/messages.properties
@@ -100,6 +100,7 @@ LoanDetail.loanNewTitle.text=Loan New Title
 LoanDetail.nrOfLoansOfCustomer.text=Nr of loans\: $PARAM
 LoanDetail.returnCopyBtn.text=Return selected book
 LoanDetail.this.title=Loan Detail
+LoanDetail.returnDateLabel.text=Return Date: $PARAM
 LoanTable.CellContent.Available=Available
 LoanTable.CellContent.Lent=Lent
 LoanTable.CellContent.OK=OK
