close-Buttons are called "Schliessen" now. Added Icon to close-button on CustomerDetail

--- a/src/views/messages.properties
+++ b/src/views/messages.properties
@@ -79,6 +79,7 @@ CustomerDetail.btnSave.text=Save
 CustomerDetail.deleteDlg.message=Do you really want to delete this customer? This action cannot be reversed.
 CustomerDetail.deleteDlg.title=Are you sure?
 CustomerDetail.this.title=Customer Details\: $PARAM
+CustomerDetail.CustomerInfo.border.title=Customer Details
 CustomerMasterTable.ColumnHeader.Address=Address
 CustomerMasterTable.ColumnHeader.CustomerNo=Customer No.
 CustomerMasterTable.ColumnHeader.Name=Name
