--- a/src/views/messages_de_CH.properties
+++ b/src/views/messages_de_CH.properties
@@ -69,6 +69,7 @@ CustomerDetail.btnSave.text=Speichern
 CustomerDetail.deleteDlg.message=Wollen Sie diesen Kunden wirklich l\u00F6schen? Diese Aktion kann nicht r\u00FCckg\u00E4ngig gemacht werden.
 CustomerDetail.deleteDlg.title=Sind Sie sicher?
 CustomerDetail.this.title=Kunden-Details: $PARAM
+CustomerDetail.CustomerInfo.border.title=Kundendetails
 CustomerMasterTable.ColumnHeader.Address=Adresse
 CustomerMasterTable.ColumnHeader.CustomerNo=Kundennummer
 CustomerMasterTable.ColumnHeader.Name=Name
