--- a/src/views/messages.properties
+++ b/src/views/messages.properties
@@ -57,11 +57,11 @@ BookMasterTable.viewMenu.text=View
 BookMastertable.BookTableModes.All=All
 BookMastertable.BookTableModes.LentOnly=Lent only
 BookMastertable.BookTableModes.OverdueOnly=Overdue only
-Copy.Condition.Damaged=Damaged
-Copy.Condition.Good=Good
-Copy.Condition.Lost=Lost
-Copy.Condition.New=New
-Copy.Condition.Waste=Waste
+Copy.Condition.DAMAGED=Damaged
+Copy.Condition.GOOD=Good
+Copy.Condition.LOST=Lost
+Copy.Condition.NEW=New
+Copy.Condition.WASTE=Waste
 CopyTable.ColHeader.Condition=Condition
 CustomerDetail.City=City
 CustomerDetail.CustomerNo=ID
