--- a/src/i18n/messages_de_CH.properties
+++ b/src/i18n/messages_de_CH.properties
@@ -96,11 +96,11 @@ LoanTable.CellContent.Overdue=Fällig
 LoanTable.CellContent.OK=OK
 CopyTable.ColHeader.Condition=Zustand
 LoanDetail.returnCopyBtn.text=Selektiertes Buch zurückgeben
-Copy.Condition.New=Neu
-Copy.Condition.Damaged=Beschädigt
-Copy.Condition.Good=Gut
-Copy.Condition.Lost=Verloren
-Copy.Condition.Waste=Zerstört
+Copy.Condition.NEW=Neu
+Copy.Condition.DAMAGED=Beschädigt
+Copy.Condition.GOOD=Gut
+Copy.Condition.LOST=Verloren
+Copy.Condition.WASTE=Zerstört
 LoanTable.CellContent.Overdue=Überfällig
 LoanTable.CellContent.Lent=Ausgelehnt
 LoanTable.CellContent.Old=Zurückgebracht
