New Splash screen. How about that?

--- a/src/i18n/messages.properties
+++ b/src/i18n/messages.properties
@@ -110,3 +110,4 @@ LoanTable.CellContent.Overdue=Overdue
 MainView.Tab.Customers=Customers
 MainView.btnExit.text=Exit
 MainView.title=Bibliotheca
+Splash.Loading.text=Loading... Please wait.
