--- a/src/i18n/messages_de_CH.properties
+++ b/src/i18n/messages_de_CH.properties
@@ -107,3 +107,4 @@ LoanTable.CellContent.Old=Zurückgebracht
 LoanTable.CellContent.Available=Verfügbar
 LoanDetail.LoansOfCustomer.text=Ausleihen von $PARAM
 LoanDetail.addLoanBtn.text=Exemplar ausleihen
+Splash.Loading.text=Wird geladen... Bitte warten.
