fixed some todos an i18n labels

--- a/src/i18n/messages.properties
+++ b/src/i18n/messages.properties
@@ -57,6 +57,8 @@ BookMasterTable.viewMenu.text=View
 BookMastertable.BookTableModes.All=All
 BookMastertable.BookTableModes.LentOnly=Lent only
 BookMastertable.BookTableModes.OverdueOnly=Overdue only
+BookMasterTable.showAvailable.text=Show Unavailable
+BookMasterTable.showAvailable.desc=Show or Hide Unavailable Books
 Copy.Condition.DAMAGED=Damaged
 Copy.Condition.GOOD=Good
 Copy.Condition.LOST=Lost
