--- a/src/i18n/messages_de_CH.properties
+++ b/src/i18n/messages_de_CH.properties
@@ -56,6 +56,7 @@ BookMasterTable.viewMenu.text=Ansicht
 BookMastertable.BookTableModes.All=Alle
 BookMastertable.BookTableModes.LentOnly=Nur Ausgeliehene
 BookMastertable.BookTableModes.OverdueOnly=Nur \u00DCberf\u00E4llige
+BookMasterTable.showAvailable.text=Nicht verfügbare anzeigen
 CustomerDetail.City=Stadt
 CustomerDetail.CustomerNo=ID
 CustomerDetail.Name=Name
