added error message if you want to delete a customer with lent loans

--- a/src/i18n/messages.properties
+++ b/src/i18n/messages.properties
@@ -80,6 +80,7 @@ CustomerDetail.btnReset.text=Reset
 CustomerDetail.btnSave.text=Save
 CustomerDetail.deleteDlg.message=Do you really want to delete this customer? This action cannot be reversed.
 CustomerDetail.deleteDlg.title=Are you sure?
+CustomerDetail.deleteDlg.error=This customer can't be deleted because he has some lent books.
 CustomerDetail.this.title=Customer Details\: $PARAM
 CustomerDetail.CustomerInfo.border.title=Customer Details
 CustomerMasterTable.ColumnHeader.Address=Address
