Fixed some Mnemonics

--- a/src/i18n/messages.properties
+++ b/src/i18n/messages.properties
@@ -17,8 +17,8 @@ BookDetail.lblTitle.text=Title
 BookDetail.pnlInformation.borderTitle=Book Information
 BookDetail.pnlSpecimensEdit.borderTitle=Copies
 BookDetail.this.title=Book Detail\: $PARAM
-BookMaster.Tab.Books=Books
-BookMaster.Tab.Loans=Loans
+BookMaster.Tab.Books=Books (1)
+BookMaster.Tab.Loans=Loans (2)
 BookMaster.btnAddNewBook.text=Add Book
 BookMaster.btnAddNewLoan.text=Add Loan
 BookMaster.btnShowSelected.text=Show selected
@@ -107,7 +107,7 @@ LoanTable.CellContent.Lent=Lent
 LoanTable.CellContent.OK=OK
 LoanTable.CellContent.Old=Returned
 LoanTable.CellContent.Overdue=Overdue
-MainView.Tab.Customers=Customers
+MainView.Tab.Customers=Customers (3)
 MainView.btnExit.text=Exit
 MainView.title=Bibliotheca
 Splash.Loading.text=Loading... Please wait.
