--- a/src/i18n/messages_de_CH.properties
+++ b/src/i18n/messages_de_CH.properties
@@ -17,8 +17,8 @@ BookDetail.lblTitle.text=Titel
 BookDetail.this.title=Buch-Detail: $PARAM
 BookDetail.pnlInformation.borderTitle=Buch Information
 BookDetail.pnlSpecimensEdit.borderTitle=Exemplare
-BookMaster.Tab.Books=B\u00FCcher
-BookMaster.Tab.Loans=Ausleihen
+BookMaster.Tab.Books=B\u00FCcher (1)
+BookMaster.Tab.Loans=Ausleihen (2)
 BookMaster.btnAddNewBook.text=Buch hinzuf\u00FCgen
 BookMaster.btnAddNewLoan.text=Ausleihe erfassen
 BookMaster.btnShowSelected.text=Selektierte anzeigen
@@ -87,8 +87,8 @@ LoanDetail.lblReturnDate.text=R\u00FCckgabe
 LoanDetail.nrOfLoansOfCustomer.text=Anzahl Ausleihen\: $PARAM
 LoanDetail.this.title=Ausleih-Details
 LoanDetail.returnDateLabel.text=Rückgabedatum: $PARAM
-MainView.Tab.Customers=Kunden
-MainView.btnExit.text=Schliessen
+MainView.Tab.Customers=Kunden (3)
+MainView.btnExit.text=Schliessen (X)
 MainView.title=Bibliotheca
 LoanDetail.loanNewTitle.text=Neuen Titel ausleihen
 LoanDetail.CustomerSelection.text=Kundenauswahl
