CloseBtns in all Dialogs fixed

--- a/src/i18n/messages.properties
+++ b/src/i18n/messages.properties
@@ -112,5 +112,6 @@ LoanTable.CellContent.Old=Returned
 LoanTable.CellContent.Overdue=Overdue
 MainView.Tab.Customers=Customers (3)
 MainView.btnExit.text=Exit
+DetailDialogs.btnClose.text=Close
 MainView.title=Bibliotheca
 Splash.Loading.text=Loading... Please wait.
