--- a/src/i18n/messages_de_CH.properties
+++ b/src/i18n/messages_de_CH.properties
@@ -91,6 +91,7 @@ LoanDetail.this.title=Ausleih-Details
 LoanDetail.returnDateLabel.text=Rückgabedatum: $PARAM
 MainView.Tab.Customers=Kunden (3)
 MainView.btnExit.text=Schliessen (X)
+DetailDialogs.btnClose.text=Schliessen
 MainView.title=Bibliotheca
 LoanDetail.loanNewTitle.text=Neuen Titel ausleihen
 LoanDetail.CustomerSelection.text=Kundenauswahl
