made DialogTexts/Titles i18n

--- a/src/i18n/messages.properties
+++ b/src/i18n/messages.properties
@@ -17,6 +17,8 @@ BookDetail.lblTitle.text=Title
 BookDetail.pnlInformation.borderTitle=Book Information
 BookDetail.pnlSpecimensEdit.borderTitle=Copies
 BookDetail.this.title=Book Detail\: $PARAM
+BookDetail.CantDeleteLentCopy.text=This copy is currently lent and cannot be deleted.
+BookDetail.CantDeleteLentCopy.title=Copy is lent
 BookMaster.Tab.Books=Books (1)
 BookMaster.Tab.Loans=Loans (2)
 BookMaster.btnAddNewBook.text=Add Book
@@ -105,6 +107,8 @@ LoanDetail.nrOfLoansOfCustomer.text=Nr of loans\: $PARAM
 LoanDetail.returnCopyBtn.text=Return selected book
 LoanDetail.this.title=Loan Detail
 LoanDetail.returnDateLabel.text=Return Date: $PARAM
+LoanDetail.LoanOverdueDialog.text=This loan is overdue. The customer has to pay 3.- CHF.
+LoanDetail.LoanOverdueDialog.title=Overdue loan!
 LoanTable.CellContent.Available=Available
 LoanTable.CellContent.Lent=Lent
 LoanTable.CellContent.OK=OK
