--- a/src/i18n/messages_de_CH.properties
+++ b/src/i18n/messages_de_CH.properties
@@ -17,6 +17,8 @@ BookDetail.lblTitle.text=Titel
 BookDetail.this.title=Buch-Detail: $PARAM
 BookDetail.pnlInformation.borderTitle=Buch Information
 BookDetail.pnlSpecimensEdit.borderTitle=Exemplare
+BookDetail.CantDeleteLentCopy.text=Dieses Exemplar ist zur Zeit ausgeliehen und kann nicht gelöscht werden.
+BookDetail.CantDeleteLentCopy.title=Exemplar ausgeliehen
 BookMaster.Tab.Books=B\u00FCcher (1)
 BookMaster.Tab.Loans=Ausleihen (2)
 BookMaster.btnAddNewBook.text=Buch hinzuf\u00FCgen
@@ -89,6 +91,8 @@ LoanDetail.lblReturnDate.text=R\u00FCckgabe
 LoanDetail.nrOfLoansOfCustomer.text=Anzahl Ausleihen\: $PARAM
 LoanDetail.this.title=Ausleih-Details
 LoanDetail.returnDateLabel.text=Rückgabedatum: $PARAM
+LoanDetail.LoanOverdueDialog.text=Diese Ausleihe ist überfallig. Es muss eine Gebühr von 3.- CHF bezahlt werden.
+LoanDetail.LoanOverdueDialog.title=Überfällige Ausleihe!
 MainView.Tab.Customers=Kunden (3)
 MainView.btnExit.text=Schliessen (X)
 DetailDialogs.btnClose.text=Schliessen
