DeleteBook-Dialog: No is now the selecte answer by default

--- a/src/i18n/messages.properties
+++ b/src/i18n/messages.properties
@@ -119,3 +119,5 @@ MainView.btnExit.text=Exit
 DetailDialogs.btnClose.text=Close
 MainView.title=Bibliotheca
 Splash.Loading.text=Loading... Please wait.
+Common.Yes=Yes
+Common.No=No
