--- a/src/i18n/messages_de_CH.properties
+++ b/src/i18n/messages_de_CH.properties
@@ -58,7 +58,7 @@ BookMasterTable.viewMenu.text=Ansicht
 BookMastertable.BookTableModes.All=Alle
 BookMastertable.BookTableModes.LentOnly=Nur Ausgeliehene
 BookMastertable.BookTableModes.OverdueOnly=Nur \u00DCberf\u00E4llige
-BookMasterTable.showAvailable.text=Nicht verfügbare anzeigen
+BookMasterTable.showAvailable.text=Nicht verfügbare anzeigen (U)
 CustomerDetail.City=Stadt
 CustomerDetail.CustomerNo=ID
 CustomerDetail.Name=Name
@@ -115,3 +115,5 @@ LoanTable.CellContent.Available=Verfügbar
 LoanDetail.LoansOfCustomer.text=Ausleihen von $PARAM
 LoanDetail.addLoanBtn.text=Exemplar ausleihen
 Splash.Loading.text=Wird geladen... Bitte warten.
+Common.Yes=Ja
+Common.No=Nein
