All ToolTips added and translated

--- a/src/i18n/messages.properties
+++ b/src/i18n/messages.properties
@@ -20,11 +20,18 @@ BookDetail.this.title=Book Detail\: $PARAM
 BookDetail.CantDeleteLentCopy.text=This copy is currently lent and cannot be deleted.
 BookDetail.CantDeleteLentCopy.title=Copy is lent
 BookMaster.Tab.Books=Books (1)
+BookMaster.Tab.Books.desc=Shows an overview over all books that are currently in the library
 BookMaster.Tab.Loans=Loans (2)
+BookMaster.Tab.Loans.desc=Shows an overview over all current and past loans
+BookMaster.txtSearch.desc=Search library for a certain text
 BookMaster.btnAddNewBook.text=Add Book
+BookMaster.btnAddNewBook.desc=Add a new Book
 BookMaster.btnAddNewLoan.text=Add Loan
+BookMaster.btnAddNewLoan.desc=Add a new Loan
 BookMaster.btnShowSelected.text=Show selected
+BookMaster.btnShowSelected.desc=Show the books that have been selected in the list
 BookMaster.btnShowSelectedLoans.text=Show selected
+BookMaster.btnShowSelectedLoans.desc=Show the loans that have been selected in the list
 BookMaster.lblChosen.text=Selected\: $PARAM
 BookMaster.lblNrOfBooks.text=Nr of books\: $PARAM
 BookMaster.lblNrOfCopies.text=Nr of copies\: $PARAM
@@ -90,10 +97,15 @@ CustomerMasterTable.ColumnHeader.CustomerNo=Customer No.
 CustomerMasterTable.ColumnHeader.Name=Name
 CustomerTab.CustomerStats.Title=Customer Details
 CustomerTab.btnAddNewCustomer.text=New Customer
+CustomerTab.btnAddNewCustomer.desc=Add a new customer
 CustomerTab.btnShowSelected.text=Show selected
+CustomerTab.btnShowSelected.desc=Show the customer that has been selected in the customer list
 CustomerTab.lblNrOfCustomers.text=Nr of customers\: $PARAM
 Customertab.pnlCustomerInventory.borderTitle=Customer List
+CustomerTab.txtSearch.desc=Search the customer list for a certain text
 Library.DateFormat=mm/dd/yy
+LoansTab.cmbLoanTableModes.desc=Show different groups of loans
+LoansTab.txtSearchLoans.desc=Search Loans for a certain text
 LoanDetail.CustomerSelection.text=Customer Selection
 LoanDetail.LoansOfCustomer.text=Loans of $PARAM
 LoanDetail.addLoanBtn.text=Lend copy
@@ -115,7 +127,9 @@ LoanTable.CellContent.OK=OK
 LoanTable.CellContent.Old=Returned
 LoanTable.CellContent.Overdue=Overdue
 MainView.Tab.Customers=Customers (3)
+MainView.Tab.Customers.desc=Shows an overview over all customers
 MainView.btnExit.text=Exit
+MainView.btnExit.desc=Close the application, disregard all unsaved changes
 DetailDialogs.btnClose.text=Close
 MainView.title=Bibliotheca
 Splash.Loading.text=Loading... Please wait.
