--- a/src/i18n/messages_de_CH.properties
+++ b/src/i18n/messages_de_CH.properties
@@ -20,11 +20,18 @@ BookDetail.pnlSpecimensEdit.borderTitle=Exemplare
 BookDetail.CantDeleteLentCopy.text=Dieses Exemplar ist zur Zeit ausgeliehen und kann nicht gelöscht werden.
 BookDetail.CantDeleteLentCopy.title=Exemplar ausgeliehen
 BookMaster.Tab.Books=B\u00FCcher (1)
+BookMaster.Tab.Books.desc=Zeigt eine Übersicht über alle Bücher der Bibliothek
 BookMaster.Tab.Loans=Ausleihen (2)
+BookMaster.Tab.Loans.desc=Zeigt eine Übersicht über alle momentanen und vergangegen Ausleihen
+BookMaster.txtSearch.desc=Bibliothek nach einem bestimmten Text durchsuchen
 BookMaster.btnAddNewBook.text=Buch hinzuf\u00FCgen
+BookMaster.btnAddNewBook.desc=Fügt ein neues Buch hinzu
 BookMaster.btnAddNewLoan.text=Ausleihe erfassen
+BookMaster.btnAddNewLoan.desc=Erfasst eine neue Ausleihe
 BookMaster.btnShowSelected.text=Selektierte anzeigen
+BookMaster.btnShowSelected.desc=Zeige die selektieren Bücher
 BookMaster.btnShowSelectedLoans.text=Selektierte anzeigen
+BookMaster.btnShowSelectedLoans.desc=Zeigt die selektierte Ausleihe in einem eigenen Fenster
 BookMaster.lblChosen.text=Ausgew\u00E4hlt\: $PARAM
 BookMaster.lblNrOfBooks.text=Anzahl B\u00FCcher\: $PARAM
 BookMaster.lblNrOfCopies.text=Anzahl Exemplare\: $PARAM
@@ -79,10 +86,15 @@ CustomerMasterTable.ColumnHeader.CustomerNo=Kundennummer
 CustomerMasterTable.ColumnHeader.Name=Name
 CustomerTab.CustomerStats.Title=Kundeninfos
 CustomerTab.btnAddNewCustomer.text=Neuer Kunde
+CustomerTab.btnAddNewCustomer.desc=Neuen Kunde hinzufügen
 CustomerTab.btnShowSelected.text=Selektierte anzeigen
+CustomerTab.btnShowSelected.desc=Zeige den ausgewählten Kunden in einem neuen Fenster
 CustomerTab.lblNrOfCustomers.text=Anzahl Kunden\: $PARAM
 Customertab.pnlCustomerInventory.borderTitle=Kundenliste
+CustomerTab.txtSearch.desc=Durchsuche die Kundenliste nach einem bestimmten Text
 Library.DateFormat=dd.mm.yy
+LoansTab.cmbLoanTableModes.desc=Zeige verschiedene Gruppen von Ausleihen
+LoansTab.txtSearchLoans.desc=Durchsuche Ausleihen nach einem bestimmten Text
 LoanDetail.btnCopy.text=Suchen
 LoanDetail.lblCopyId.text=Exemplar-Nr.
 LoanDetail.lblCustomer.text=Kunde
@@ -94,7 +106,9 @@ LoanDetail.returnDateLabel.text=Rückgabedatum: $PARAM
 LoanDetail.LoanOverdueDialog.text=Diese Ausleihe ist überfallig. Es muss eine Gebühr von 3.- CHF bezahlt werden.
 LoanDetail.LoanOverdueDialog.title=Überfällige Ausleihe!
 MainView.Tab.Customers=Kunden (3)
+MainView.Tab.Customers.desc=Zeigt eine Übersicht über alle Kunden
 MainView.btnExit.text=Schliessen (X)
+MainView.btnExit.desc=Schliesst die Applikation, verwirft alle Änderungen
 DetailDialogs.btnClose.text=Schliessen
 MainView.title=Bibliotheca
 LoanDetail.loanNewTitle.text=Neuen Titel ausleihen
