Added ToolTips in DetailDialogs, translated and checked all translations in DE and EN

--- a/src/i18n/messages.properties
+++ b/src/i18n/messages.properties
@@ -82,11 +82,11 @@ CustomerDetail.Surname=Surname
 CustomerDetail.Zip=ZIP
 CustomerDetail.btnCancel.text=Cancel
 CustomerDetail.btnDelete.text=Delete Customer
-CustomerDetail.btnNewButton_1.text_1=Save
-CustomerDetail.btnNewButton_2.text=Cancel
-CustomerDetail.btnNewButton_3.text_1=Reset
+CustomerDetail.btnDelete.desc=Deletes this customer
 CustomerDetail.btnReset.text=Reset
 CustomerDetail.btnSave.text=Save
+CustomerDetail.btnReset.desc=Revert changes
+CustomerDetail.btnSave.desc=Save changes
 CustomerDetail.deleteDlg.message=Do you really want to delete this customer? This action cannot be reversed.
 CustomerDetail.deleteDlg.title=Are you sure?
 CustomerDetail.deleteDlg.error=This customer can't be deleted because he has some lent books.
@@ -109,14 +109,19 @@ LoansTab.txtSearchLoans.desc=Search Loans for a certain text
 LoanDetail.CustomerSelection.text=Customer Selection
 LoanDetail.LoansOfCustomer.text=Loans of $PARAM
 LoanDetail.addLoanBtn.text=Lend copy
+LoanDetail.addLoanBtn.desc=Lend this copy to this customer. Attention: Customer can't have an overdue or more than 3 loans!
+LoanDetail.cmbCustomer.desc=Select a customer to view their loans/create a new loan for this customer
 LoanDetail.btnCopy.text=Find
 LoanDetail.lblCopyId.text=Copy ID
 LoanDetail.lblCustomer.text=Customer
 LoanDetail.lblCustomerId.text=CustomerID
 LoanDetail.lblReturnDate.text=Return Date
+LoanDetail.pnlCopies.title=Copies
 LoanDetail.loanNewTitle.text=Loan New Title
+LoanDetail.txtSearch.desc=Search available copies for a certain text
 LoanDetail.nrOfLoansOfCustomer.text=Nr of loans\: $PARAM
 LoanDetail.returnCopyBtn.text=Return selected book
+LoanDetail.returnCopyBtn.desc=Returns the selected book back to the library and removes the customer's open loan
 LoanDetail.this.title=Loan Detail
 LoanDetail.returnDateLabel.text=Return Date: $PARAM
 LoanDetail.LoanOverdueDialog.text=This loan is overdue. The customer has to pay 3.- CHF.
@@ -131,6 +136,8 @@ MainView.Tab.Customers.desc=Shows an overview over all customers
 MainView.btnExit.text=Exit
 MainView.btnExit.desc=Close the application, disregard all unsaved changes
 DetailDialogs.btnClose.text=Close
+DetailDialogs.btnClose.desc=Close the detail window, disregard changes
+
 MainView.title=Bibliotheca
 Splash.Loading.text=Loading... Please wait.
 Common.Yes=Yes
