--- a/src/i18n/messages_de_CH.properties
+++ b/src/i18n/messages_de_CH.properties
@@ -66,6 +66,7 @@ BookMastertable.BookTableModes.All=Alle
 BookMastertable.BookTableModes.LentOnly=Nur Ausgeliehene
 BookMastertable.BookTableModes.OverdueOnly=Nur \u00DCberf\u00E4llige
 BookMasterTable.showAvailable.text=Nicht verfügbare anzeigen (U)
+BookMasterTable.showAvailable.desc=Zeige nicht verfügbare Bücher an oder nicht
 CustomerDetail.City=Stadt
 CustomerDetail.CustomerNo=ID
 CustomerDetail.Name=Name
@@ -74,8 +75,11 @@ CustomerDetail.Surname=Vorname
 CustomerDetail.Zip=PLZ
 CustomerDetail.btnCancel.text=Abbrechen
 CustomerDetail.btnDelete.text=L\u00F6schen
+CustomerDetail.btnDelete.desc=Löscht diesen Kunden
 CustomerDetail.btnReset.text=Zur\u00FCcksetzen
 CustomerDetail.btnSave.text=Speichern
+CustomerDetail.btnReset.desc=Änderungen zurücksetzen
+CustomerDetail.btnSave.desc=Speichert vorgenommene Änderungen
 CustomerDetail.deleteDlg.message=Wollen Sie diesen Kunden wirklich l\u00F6schen? Diese Aktion kann nicht r\u00FCckg\u00E4ngig gemacht werden.
 CustomerDetail.deleteDlg.title=Sind Sie sicher?
 CustomerDetail.deleteDlg.error=Dieser Kunde kann nicht gelöscht werden, da er noch Bücher ausgeliehen hat.
@@ -95,12 +99,15 @@ CustomerTab.txtSearch.desc=Durchsuche die Kundenliste nach einem bestimmten Text
 Library.DateFormat=dd.mm.yy
 LoansTab.cmbLoanTableModes.desc=Zeige verschiedene Gruppen von Ausleihen
 LoansTab.txtSearchLoans.desc=Durchsuche Ausleihen nach einem bestimmten Text
+LoanDetail.cmbCustomer.desc=Kunde auswählen, um dessen Ausleihen zu sehen oder um eine neue Ausleihe für diesen Kunden zu erstellen
 LoanDetail.btnCopy.text=Suchen
 LoanDetail.lblCopyId.text=Exemplar-Nr.
 LoanDetail.lblCustomer.text=Kunde
 LoanDetail.lblCustomerId.text=Kundennr.
 LoanDetail.lblReturnDate.text=R\u00FCckgabe
+LoanDetail.pnlCopies.title=Exemplare
 LoanDetail.nrOfLoansOfCustomer.text=Anzahl Ausleihen\: $PARAM
+LoanDetail.txtSearch.desc=Verfügbare Exemplare nach einem bestimmten Text durchsuchen
 LoanDetail.this.title=Ausleih-Details
 LoanDetail.returnDateLabel.text=Rückgabedatum: $PARAM
 LoanDetail.LoanOverdueDialog.text=Diese Ausleihe ist überfallig. Es muss eine Gebühr von 3.- CHF bezahlt werden.
@@ -110,6 +117,7 @@ MainView.Tab.Customers.desc=Zeigt eine Übersicht über alle Kunden
 MainView.btnExit.text=Schliessen (X)
 MainView.btnExit.desc=Schliesst die Applikation, verwirft alle Änderungen
 DetailDialogs.btnClose.text=Schliessen
+DetailDialogs.btnClose.desc=Schliesst das Detail-Fenster
 MainView.title=Bibliotheca
 LoanDetail.loanNewTitle.text=Neuen Titel ausleihen
 LoanDetail.CustomerSelection.text=Kundenauswahl
@@ -117,6 +125,7 @@ LoanTable.CellContent.Overdue=Fällig
 LoanTable.CellContent.OK=OK
 CopyTable.ColHeader.Condition=Zustand
 LoanDetail.returnCopyBtn.text=Selektiertes Buch zurückgeben
+LoanDetail.returnCopyBtn.desc=Fügt das Buch wieder in die Bibliothek ein und entfernt die offene Ausleihe des Kunden
 Copy.Condition.NEW=Neu
 Copy.Condition.DAMAGED=Beschädigt
 Copy.Condition.GOOD=Gut
@@ -128,6 +137,7 @@ LoanTable.CellContent.Old=Zurückgebracht
 LoanTable.CellContent.Available=Verfügbar
 LoanDetail.LoansOfCustomer.text=Ausleihen von $PARAM
 LoanDetail.addLoanBtn.text=Exemplar ausleihen
+LoanDetail.addLoanBtn.desc=Leihe dieses Exemplar an einen bestimmten Kunden aus. Vorsicht: Kunde darf keine überfälligen oder mehr als 3 Ausleihen haben!
 Splash.Loading.text=Wird geladen... Bitte warten.
 Common.Yes=Ja
 Common.No=Nein
