Added ToolTips to BookDetail

--- a/src/i18n/messages.properties
+++ b/src/i18n/messages.properties
@@ -1,12 +1,15 @@
 #Eclipse messages class
 #Tue Nov 26 11:08:18 CET 2013
 BookDetail.btnAdd.text=Add Copy
-BookDetail.btnCancel.text=Cancel
-BookDetail.btnDelete.text=Delete
 BookDetail.btnRemove.text=Delete
 BookDetail.btnRemoveCopy.text=Remove selected
 BookDetail.btnReset.text=Reset
 BookDetail.btnSave.text=Save
+BookDetail.btnAdd.desc=Add a copy of this book to the library
+BookDetail.btnRemove.desc=Delete this book and all of its copies. It's not possible to remove a book if copies are currently lent!
+BookDetail.btnRemoveCopy.desc=Remove selected copies. Careful, it's not possible to delete the last copy of a book or a lent copy!
+BookDetail.btnReset.desc=Revert changes
+BookDetail.btnSave.desc=Save changes
 BookDetail.deleteDlg.message=Do you really want to delete this book? This also deletes all of its copies. This action cannot be reversed.
 BookDetail.deleteDlg.title=Are you sure?
 BookDetail.lblAmount.text=Amount\: $PARAM
