--- a/src/i18n/messages_de_CH.properties
+++ b/src/i18n/messages_de_CH.properties
@@ -1,12 +1,15 @@
 #Eclipse messages class
 #Sun Nov 17 13:16:44 CET 2013
 BookDetail.btnAdd.text=Exemplar hinzuf\u00FCgen
-BookDetail.btnCancel.text=Abbrechen
-BookDetail.btnDelete.text=L\u00F6schen
 BookDetail.btnRemove.text=L\u00F6schen
 BookDetail.btnRemoveCopy.text=Ausgew\u00E4hlte entfernen
 BookDetail.btnReset.text=Zur\u00FCcksetzen
 BookDetail.btnSave.text=Speichern
+BookDetail.btnAdd.desc=Fügt ein Exemplar dieses Buchs zur Bibliothek hinzu
+BookDetail.btnRemove.desc=Lösche dieses Buch und alle Exemplare. Vorsicht: Es ist nicht möglich, ein Buch mit ausgeliehenen Exemplaren zu löschen!
+BookDetail.btnRemoveCopy.desc=Entferne ausgewählte Exemplare. Es ist nicht möglich, ausgeliehene Exemplare oder das letzte Exemplar eines Buches zu entfernen!
+BookDetail.btnReset.desc=Änderungen verwerfen und zurücksetzen
+BookDetail.btnSave.desc=Änderungen speichern
 BookDetail.deleteDlg.message=Wollen Sie dieses Buch wirklich l\u00F6schen? Dadurch werden auch alle Exemplare dieses Titels gel\u00F6scht. Diese Aktion kann nicht r\u00FCckg\u00E4ngig gemacht werden.
 BookDetail.deleteDlg.title=Sind Sie sicher?
 BookDetail.lblAmount.text=Anzahl\: $PARAM
