Added menu again :)

--- a/src/i18n/messages.properties
+++ b/src/i18n/messages.properties
@@ -138,9 +138,18 @@ MainView.Tab.Customers=Customers (3)
 MainView.Tab.Customers.desc=Shows an overview over all customers
 MainView.btnExit.text=Exit
 MainView.btnExit.desc=Close the application, disregard all unsaved changes
+MainView.Menu.File.title=File
+MainView.Menu.Help.title=Help
+MainView.Menu.Help.about=About
+MainView.Menu.Help.help=Show Help
+MainView.AboutDlg.text=This application was created in Nov./Dec. 2013 by Pascal Forster & Philipp Christen for a mini project for User Interfaces I at the HSR.
+MainView.AboutDlg.title=About this Application
+MainView.HelpDlg.text=Need help? Try to hover over the different components.
+MainView.HelpDlg.title=Help
+MainView.Menu.Help.aboutDesc=General information about this application
+MainView.Menu.Help.helpDesc=Shows a small help to get you started
 DetailDialogs.btnClose.text=Close
 DetailDialogs.btnClose.desc=Close the detail window, disregard changes
-
 MainView.title=Bibliotheca
 Splash.Loading.text=Loading... Please wait.
 Common.Yes=Yes
