--- a/src/i18n/messages_de_CH.properties
+++ b/src/i18n/messages_de_CH.properties
@@ -119,6 +119,16 @@ MainView.Tab.Customers=Kunden (3)
 MainView.Tab.Customers.desc=Zeigt eine Übersicht über alle Kunden
 MainView.btnExit.text=Schliessen (X)
 MainView.btnExit.desc=Schliesst die Applikation, verwirft alle Änderungen
+MainView.Menu.File.title=Datei
+MainView.Menu.Help.title=Hilfe
+MainView.Menu.Help.about=Über
+MainView.Menu.Help.help=Hilfe anzeigen
+MainView.Menu.Help.aboutDesc=Allgemeine Infos über diese Applikation
+MainView.Menu.Help.helpDesc=Zeigt eine kleine Hilfestellung an
+MainView.AboutDlg.text=Diese Applikation wurde im Nov./Dez. 2013 von Pascal Forster & Philipp Christen für ein Miniprojekt in User Interfaces I an der HSR entworfen.
+MainView.AboutDlg.title=Über diese Applikation
+MainView.HelpDlg.text=Planlos? Versuchen Sie einmal, mit dem Mauszeger über Komponenten zu schweben.
+MainView.HelpDlg.title=Hilfe
 DetailDialogs.btnClose.text=Schliessen
 DetailDialogs.btnClose.desc=Schliesst das Detail-Fenster
 MainView.title=Bibliotheca
