Help-Dialog with HTML-Formatting

--- a/src/i18n/messages_de_CH.properties
+++ b/src/i18n/messages_de_CH.properties
@@ -121,13 +121,13 @@ MainView.btnExit.text=Schliessen (X)
 MainView.btnExit.desc=Schliesst die Applikation, verwirft alle Änderungen
 MainView.Menu.File.title=Datei
 MainView.Menu.Help.title=Hilfe
-MainView.Menu.Help.about=Über
+MainView.Menu.Help.about=Über (A)
 MainView.Menu.Help.help=Hilfe anzeigen
 MainView.Menu.Help.aboutDesc=Allgemeine Infos über diese Applikation
 MainView.Menu.Help.helpDesc=Zeigt eine kleine Hilfestellung an
 MainView.AboutDlg.text=Diese Applikation wurde im Nov./Dez. 2013 von Pascal Forster & Philipp Christen für ein Miniprojekt in User Interfaces I an der HSR entworfen.
 MainView.AboutDlg.title=Über diese Applikation
-MainView.HelpDlg.text=Planlos? Versuchen Sie einmal, mit dem Mauszeger über Komponenten zu schweben.
+MainView.HelpDlg.text=<html> <style type="text/css"> .tftable {font-size:10px;color:#000000;width:100%;border-width: 1px;border-color: #000000;border-collapse: collapse;} .tftable th {font-size:10px;background-color:#E0E0E0;border-width: 1px;padding: 2px 8px;border-style: solid;border-color: #DDDDDD;text-align:left;} .tftable td {font-size:10px;border-width: 1px;padding: 8px;border-style: solid;border-color: #DDDDDD;} </style> <table class="tftable" border="1"> <tr> <th>Komponente</th> <th>Info</th> <th>Abkürzung</th> </tr> <tr> <td>Suchfeld</td> <td>Text eingeben, um damit Bücher, Ausleihen oder Kunden zu suchen.</td> <td>Alt-F</td> </tr> <tr> <td>Neu/Hinzufügen/Erfassen</td> <td>Fügt ein neues Buch/neue Ausleihe/neuen Kunden hinzu</td> <td>Alt-N</td> </tr> <tr> <td>Selektierte Anzeigen</td> <td>Zeigt die momentan ausgewählten Bücher/Ausleihe/Kunde in einem eigenen Fenster an</td> <td>Alt-S, Enter</td> </tr> <tr> <td>Zurücksetzen</td> <td>Verwirft vorgenommene und noch nicht gespeicherte Änderungen</td> <td>Alt-R</td> </tr> <tr> <td>Speichern</td> <td>Speichert an diesem Datensatz vorgenommene Änderungen</td> <td>Alt-S</td> </tr> <tr> <td>Löschen</td> <td>Löscht das momentan geöffnete Buch/Ausleihe/Kunden</td> <td>Alt-D</td> </tr> <tr> <td>Schliessen</td> <td>Schliesst das momentan geöffnete Fenster. Änderungen werden verworfen!</td> <td>Alt-C, Escape, Alt-F4</td> </tr> <tr> <td></td> <td></td> <td></td> </tr> </table> </html>
 MainView.HelpDlg.title=Hilfe
 DetailDialogs.btnClose.text=Schliessen
 DetailDialogs.btnClose.desc=Schliesst das Detail-Fenster
